# repo-context

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pages/: repo_comparison.py  repo_context_generator.py
src/repo_context/: __init__.py  cli.py  core.py  gpqs_calculator.py
